fix: overflow, styles

--- a/src/pages/Monument.module.scss
+++ b/src/pages/Monument.module.scss
@@ -47,6 +47,10 @@ $blue-accent: #5d9bff;
   height: 95dvh;
   cursor: default;
   transition: height 0.4s cubic-bezier(.4,0,.2,1);
+
+  .description {
+    overflow-y: auto;
+  }
 }
 
 .footerContent {
@@ -84,7 +88,6 @@ $blue-accent: #5d9bff;
 .descriptionImageWrapper {
   max-width: 100%;
   width: 100%;
-  overflow: hidden;
   display: flex;
   gap: 1rem;
 }
@@ -120,10 +123,11 @@ $blue-accent: #5d9bff;
     top: -1.5rem;
     right: 1rem;
     border-radius: 50%;
-    background: $blue-accent;
-    color: white;
-    font-size: 1.2rem;
+    background: #fff;
+    color: $blue-accent;
+    font-size: 1.5rem;
     border: 5px solid white;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .backButton {
